# ResumeMatchAI

./: .dockerignore  .env.example  .env.yaml.template  .gcloudignore  .replit  Dockerfile  Introduction.md  alternative_deployment_options.md  app.py  app.yaml  cloud-run.yaml  cloudbuild.yaml  cloudrun_port_fix.md  deploy.sh  deploy_to_gcp.md  docker-compose.yml  docker_deployment_guide.md  dockerfile_deployment_guide.md  document_parser.py  fix_cloudrun_deployment.md  fix_memory_issue.md  force_refresh.md  gcp_deployment_complete_guide.md  google_calendar_service.py  google_calendar_setup_guide.md  google_cloud_setup_guide.md  google_cloud_web_deployment.md  local_setup_guide.md  matching_engine.py  models.py  nlp_processor.py  pyproject.toml  railway_docker_setup.md  replit.md  requirements-gcp.txt  requirements.txt  routes.py  run_local.py  setup_google_cloud.sh  utils.py
instance/: resume_match.db
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  appointment_detail.html  appointments.html  base.html  candidates.html  candidates_backup.html  candidates_broken.html  candidates_old.html  dashboard.html  index.html  job_detail.html  schedule_appointment.html  upload.html
uploads/: .gitkeep
